does this fix the gallery stretch

--- a/src/pages/ClubPage.css
+++ b/src/pages/ClubPage.css
@@ -61,7 +61,7 @@
 }
 
 .clubpage-content-gallery {
-  height: 34vw;
+  height: 20vw;
 }
 
 .clubpage-header {
